// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cover Form Store: Initial State 1`] = `
Object {
  "errors": Object {},
}
`;

exports[`Cover Form Store: everything ok 1`] = `
Object {
  "errors": Object {
    "formModel": Object {
      "ok": true,
    },
    "myString": Object {
      "errors": Array [
        Object {
          "type": 3,
        },
      ],
      "mapTo": "myString",
    },
  },
}
`;

exports[`Cover Form Store: getFormData 1`] = `
Object {
  "myNum": 420,
  "myString": "my new string",
}
`;

exports[`Cover Form Store: number is boolean err 1`] = `
Object {
  "errors": Object {
    "formModel": Object {
      "errors": Array [
        Object {
          "errors": Array [
            Object {
              "type": 3,
            },
          ],
          "mapTo": "myNum",
        },
      ],
      "model": "formModel",
    },
    "myString": Object {
      "errors": Array [
        Object {
          "type": 3,
        },
      ],
      "mapTo": "myString",
    },
  },
}
`;

exports[`Cover Form Store: number is string err 1`] = `
Object {
  "errors": Object {
    "formModel": Object {
      "errors": Array [
        Object {
          "errors": Array [
            Object {
              "type": 3,
            },
          ],
          "mapTo": "myNum",
        },
      ],
      "model": "formModel",
    },
    "myString": Object {
      "errors": Array [
        Object {
          "type": 3,
        },
      ],
      "mapTo": "myString",
    },
  },
}
`;

exports[`Cover Form Store: text is boolean err 1`] = `
Object {
  "errors": Object {
    "formModel": Object {
      "errors": Array [
        Object {
          "errors": Array [
            Object {
              "type": 3,
            },
          ],
          "mapTo": "myString",
        },
      ],
      "model": "formModel",
    },
    "myString": Object {
      "errors": Array [
        Object {
          "type": 3,
        },
      ],
      "mapTo": "myString",
    },
  },
}
`;

exports[`Cover Form Store: text is num err 1`] = `
Object {
  "errors": Object {
    "formModel": Object {
      "errors": Array [
        Object {
          "errors": Array [
            Object {
              "type": 3,
            },
          ],
          "mapTo": "myString",
        },
      ],
      "model": "formModel",
    },
    "myString": Object {
      "errors": Array [
        Object {
          "type": 3,
        },
      ],
      "mapTo": "myString",
    },
  },
}
`;

exports[`Cover Form Store: text is ok 1`] = `
Object {
  "errors": Object {
    "formModel": Object {
      "ok": true,
    },
    "myString": Object {
      "errors": Array [
        Object {
          "type": 3,
        },
      ],
      "mapTo": "myString",
    },
  },
}
`;
